# blog-api-main

./: .coverage  .coveragerc  .editorconfig  .env  .gitignore  API_SPECIFICATION.md  AUTHENTICATION_CHANGE.md  AUTHENTICATION_IMPLEMENTATION_REPORT.md  BUG_REPORT_MAIN_V2.4.md  COMPARISON_REPORT_0605.md  COMPLETION_REPORT.md  FINAL_TEST_COMPLETION_REPORT_20250605.md  FINAL_TEST_SUCCESS_REPORT_0605.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_TEST_COMMANDS.md  README.md  README_TEST_GUIDE.md  RENDER_DEPLOY_GUIDE.md  SYSTEM_COMPLETE_MAP.md  TESTING_MASTER_GUIDE.md  TEST_GUIDE.md  TEST_REPORT_UPDATE_GUIDE.md  alembic.ini  article-detail.html  article_router_testing_summary.md  blog.db  blog_api.db  bug_history.json  bug_history_final.json  bug_report.html  bug_report_latest.html  cleanup_null_articles.py  comprehensive_bug_tracking_report.html  comprehensive_bug_tracking_report.json  coverage.json  coverage.xml  coverage_20250605_202621.json  coverage_20250605_203628.json  coverage_20250605_204046.json  (+65 more)
archives/: FINAL_TEST_SUMMARY_20250605.md  README.md
doc/: blog.db  conf.py  index.rst  logger.rst  routers.user.rst  tests.bug_tracker.rst  tests.rst  tests.test_article_router.rst  tests.test_custom_token.rst  tests.test_email_sender.rst  tests.test_integration.rst  tests.test_oauth2.rst  tests.test_schemas.rst  tests.test_user_router.rst  update_main_bug_history.rst  utils.rst
logger/: __init__.py  custom_logger.py
mailmodels/: __init__.py  verification.py
reports/: README.md  index.html
routers/: __init__.py  article.py  auth.py  user.py
scripts/: XML_AUTOMATION_GUIDE.md  organize_html_files.py  organize_xml_files.py  unified_organizer.py
source/: modules.rst
test_reports/: test_report_20250605_202621.html  test_report_20250605_202621.md  test_report_20250605_202634.html  test_report_20250605_202634.md  test_report_20250605_203039.html  test_report_20250605_203039.md  test_report_20250605_203502.html  test_report_20250605_203502.md  test_report_20250605_203628.html  (+81 more)
(+310 files in other folders)
